fix one java 9 deprecation warning